Add some test code, fix parameters